<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_agent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="@color/card_background_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_item_photo"
                        android:layout_width="70dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="4dp"
                        android:scaleType="centerCrop"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintVertical_bias="0.0"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tv_item_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toEndOf="@+id/img_item_photo"
                        android:textColor="#CCCCCC"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
                        card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
                        tools:text="@string/agents_name" />

                    <TextView
                        android:id="@+id/tv_item_role"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:textColor="#CCCCCC"
                        android:textStyle="italic|bold"
                        card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
                        card_view:layout_constraintHorizontal_bias="1.0"
                        card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
                        card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
                        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                        card_view:layout_constraintVertical_bias="0.019"
                        tools:text="@string/role" />

                    <TextView
                        android:id="@+id/tv_item_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:textColor="#CCCCCC"
                        card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
                        card_view:layout_constraintHorizontal_bias="1.0"
                        card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
                        card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
                        card_view:layout_constraintTop_toBottomOf="@+id/tv_item_role"
                        card_view:layout_constraintVertical_bias="0.019"
                        tools:text="@string/description" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_util"
                android:layout_below="@+id/card_view_agent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="@color/card_background_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <LinearLayout
                        android:id="@+id/util_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_marginEnd="57dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/img_item_util1"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:scaleType="centerCrop"
                                tools:src="@tools:sample/avatars" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="#CCCCCC"
                                android:textStyle="bold"
                                android:text="Q" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginEnd="57dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/img_item_util2"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:scaleType="centerCrop"
                                tools:src="@tools:sample/avatars" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="#CCCCCC"
                                android:textStyle="bold"
                                android:text="E" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginEnd="57dp"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/img_item_util3"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:scaleType="centerCrop"
                                tools:src="@tools:sample/avatars" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="#CCCCCC"
                                android:textStyle="bold"
                                android:text="C" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/img_item_util4"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:scaleType="centerCrop"
                                tools:src="@tools:sample/avatars" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="#CCCCCC"
                                android:textStyle="bold"
                                android:text="X" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/card_view_util"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardBackgroundColor="@color/card_background_color">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="8dp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintVertical_bias="0.0">

                        <TextView
                            android:id="@+id/tv_item_name_q"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#CCCCCC"
                            tools:text="@string/skillname" />

                        <TextView
                            android:id="@+id/tv_item_desc_q"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="7dp"
                            android:ellipsize="end"
                            android:textColor="#CCCCCC"
                            tools:text="@string/skilldesc" />

                        <TextView
                            android:id="@+id/tv_item_name_e"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#CCCCCC"
                            tools:text="@string/skillname" />

                        <TextView
                            android:id="@+id/tv_item_desc_e"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="7dp"
                            android:textColor="#CCCCCC"
                            tools:text="@string/skilldesc" />

                        <TextView
                            android:id="@+id/tv_item_name_c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#CCCCCC"
                            tools:text="@string/skillname" />

                        <TextView
                            android:id="@+id/tv_item_desc_c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="7dp"
                            android:textColor="#CCCCCC"
                            tools:text="@string/skilldesc" />

                        <TextView
                            android:id="@+id/tv_item_name_x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#CCCCCC"
                            tools:text="@string/skillname" />

                        <TextView
                            android:id="@+id/tv_item_desc_x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:layout_marginTop="5dp"
                            android:textColor="#CCCCCC"
                            tools:text="@string/skilldesc" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

